# MayaGaussianSplatting

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  _build_tmp.bat  build.bat
GaussianSplatting/: GaussianSplatting.sln  GaussianSplatting.vcxproj  GaussianSplatting.vcxproj.filters
GaussianSplatting/shaders/: Preprocessing.compute  WaveCommon.hlsl  WaveRadixSort.compute  WaveScan.compute  debug.hlsl  depth_copy.hlsl  depth_pass.hlsl  gaussianDebug.fx  merged_preprocess.hlsl  production.hlsl  radix_sort.hlsl  select.hlsl
GaussianSplatting/src/: GaussianData.h  GaussianDataNode.cpp  GaussianDataNode.h  GaussianDrawOverride.cpp  GaussianDrawOverride.h  GaussianGeometryOverride.cpp  GaussianGeometryOverride.h  GaussianNode.cpp  GaussianNode.h  GaussianRenderManager.cpp  GaussianRenderManager.h  GaussianSelection.cpp  GaussianSelection.h  PLYReader.cpp  PLYReader.h  ShaderLoader.cpp  ShaderLoader.h  plugin_main.cpp
